@@ -150,10 +150,11 @@ def env_merge_info(app: Sphinx, env: BuildEnvironment, docnames: Iterable[str],
         if modname not in env._viewcode_modules:  # type: ignore
             env._viewcode_modules[modname] = entry  # type: ignore
         else:
-            used = env._viewcode_modules[modname][2]  # type: ignore
-            for fullname, docname in entry[2].items():
-                if fullname not in used:
-                    used[fullname] = docname
+            if env._viewcode_modules[modname]:  # type: ignore
+                used = env._viewcode_modules[modname][2]  # type: ignore
+                for fullname, docname in entry[2].items():
+                    if fullname not in used:
+                        used[fullname] = docname
 
 
 def env_purge_doc(app: Sphinx, env: BuildEnvironment, docname: str) -> None:
